# smartticket

./: .air.toml  .dockerignore  .env.dev  .env.example  .gitignore  .golangci.yml  AGENTS.md  BACKEND.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DESIGN_REVIEW.md  Dockerfile  Dockerfile.dev  FRONTEND.md  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.sum  hidden-software-gems.zh-CN.md  linbit-deployment-tool.zh-CN.md  lint_output.txt  login_response.json  package.json  run_e2e_tests.js  test-e2e.sh  test_all_services_e2e.sh  test_e2e_complete.sh  test_e2e_final.sh  test_e2e_real.sh  test_interfaces_one_by_one.sh  test_knowledge_create_article.sh  test_knowledge_dev_bypass.sh  test_knowledge_simple.sh  test_knowledge_with_auth.sh  test_simple_e2e.sh  test_sla_auth.sh  (+10 more)
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md
api/: openapi.yaml  smartticket.v1.openapi.json  swagger.yaml
apps/smartticket/: Info.plist
cmd/server/: main.go
config/: development.yaml  testing.yaml
configs/: config.dev.yaml  config.local.yaml  config.prod.yaml  config.staging.yaml  config.test.yaml  schema.yaml
crates/: gnowledge_service.rs.broken
crates/core/: Cargo.toml
crates/gateway/: Cargo.toml
crates/gateway/src/: auth_middleware.rs  auth_service.rs  grpc_client.rs  grpc_service.rs  http_server.rs  knowledge_service.rs.backup  knowledge_service.rs.bak2  knowledge_service_old.rs  lib.rs  main.rs  role_permission_service.rs  sla_service.rs  tenant_service.rs  tests.rs  user_service.rs
crates/gateway/src/gateway/: auth_service.rs  error.rs  gateway_router.rs  middleware.rs  swagger.rs
crates/gateway/src/proto/: smartticket.v1.rs
crates/gateway/src/services/: mod.rs
crates/gateway/src/utils/: response.rs
crates/gateway/static/: swagger-ui.html
crates/platform/: Cargo.toml
crates/shared/config/: Cargo.toml
crates/shared/config/src/: app_config.rs  redis.rs  telemetry.rs
crates/shared/metrics/: Cargo.toml
crates/shared/metrics/src/: lib.rs
deployments/: docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
deployments/nginx/: nginx.conf
dev-tools/: cleanup-temp-files.sh  test.sh
docker/: docker-compose.dev.yml  docker-compose.test.yml
docs/: competitive-analysis.md  configuration.md  development-setup.md  docker-development.md  docs.go  git-hooks.md  index.html  llms.txt  robots.txt  sitemap.xml  swagger.json  swagger.yaml
docs/api/: complete-openapi.yaml  complete-real-openapi.yaml  openapi.yaml
docs/marketing/: 2026-06-marketing-plan.md  launch-assets.md
docs/superpowers/: FOLLOWUPS.md
examples/: test_knowledge_service.rs
internal/aiassist/: assistant.go  assistant_test.go  autoresolve.go  autoresolve_test.go  generator.go  generator_test.go  handlers.go  settings.go
internal/aiteam/: agents.go  agents_test.go  handlers.go  handlers_test.go  live_qwen_test.go  orchestrator.go  orchestrator_test.go  similar.go  structured.go  suggestions.go  suggestions_test.go  team.go  team_test.go
internal/analytics/: handlers.go  service.go
internal/apikey/: handlers.go  handlers_test.go  service.go  service_test.go
internal/attachment/: handlers.go  service.go  service_test.go
internal/auth/: handlers.go  handlers_test.go  repository.go  repository_test.go  service.go  service_test.go
internal/authz/: actor.go  scope.go  scope_test.go
internal/automation/: actions.go  actions_test.go  conditions.go  conditions_test.go  engine.go  engine_test.go  events.go  events_test.go  handlers.go  handlers_test.go  scheduler.go  scheduler_test.go  service.go
internal/branding/: handlers.go  service.go  service_test.go
internal/config/: config.go  config_test.go  validation.go  validation_test.go
internal/customer/: handlers.go  service.go  service_test.go
internal/database/: database.go  initializer.go  migration.go  permissions.go  permissions_test.go
internal/department/: handlers.go  handlers_test.go  service.go  service_test.go
internal/email/: email.go  inbound.go  inbound_test.go  poller.go  poller_test.go
internal/errors/: errors.go  errors_test.go  middleware.go
internal/importexport/: export.go  export_test.go  handlers.go  service.go  (+1 more)
migrations/: 001_create_initial_tables.sql  003_create_users.sql  004_create_ticket_schema.sql  999_create_core_tables.sql
rust/: PROGRESS.md
rust/crates/ai/: Cargo.toml
rust/crates/notification/: Cargo.toml
rust/crates/shared/auth/: Cargo.toml
rust/crates/shared/auth/src/: claims.rs  jwt.rs  middleware.rs  password.rs  permissions.rs
rust/crates/shared/database/: Cargo.toml
rust/crates/shared/database/examples/: demo_auth.rs  demo_database.rs  demo_database_simple.rs
rust/crates/shared/database/src/: connection.rs  lib.rs  models.rs  queries.rs  redis_pool.rs  tenant_isolation.rs  tests.rs
rust/crates/shared/error/: Cargo.toml
rust/crates/shared/password/: Cargo.toml
rust/crates/shared/permissions/: Cargo.toml
scripts/: build.sh  dev.sh  generate-openapi.sh  generate-test-reports.sh  init-test-data.go  install-git-hooks.sh  manage-test-data.sh  pre-commit.sh  setup-dev.sh  test-backup-restore.sh  test-multi-environment.sh  test-performance.sh  test-security.sh  test.sh
test_results/: Authentication Service_results.tmp  Ticket Management_results.tmp  e2e_results_20251016_175859.txt  e2e_results_20251016_180030.txt  e2e_results_20251016_181335.txt  e2e_results_20251016_181923.txt  e2e_results_20251016_182204.txt  e2e_results_20251016_185447.txt  e2e_results_20251016_214437.txt  e2e_summary_20251016_175859.json  e2e_summary_20251016_180030.json  e2e_summary_20251016_181335.json  e2e_summary_20251016_181923.json  e2e_summary_20251016_182204.json  e2e_summary_20251016_185447.json  e2e_summary_20251016_214437.json
tests/: README.md  run_all_tests.sh
web/: embed.go  embed_stub.go  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web-widget/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
(+700 files in other folders)
