[package]
name = "smartticket-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
smartticket-shared-config = { path = "../shared/config" }
smartticket-shared-error = { path = "../shared/error" }
smartticket-shared-auth = { path = "../shared/auth" }
smartticket-shared-database = { path = "../shared/database" }
smartticket-core = { path = "../core" }

tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
futures = "0.3"
bcrypt = "0.15"
sqlx = { workspace = true }
anyhow = { workspace = true }

[[bin]]
name = "gateway"
path = "src/main.rs"

[[example]]
name = "demo_knowledge_service"
path = "../../examples/demo_knowledge_service.rs"

[[example]]
name = "demo_knowledge_simple"
path = "../../examples/demo_knowledge_simple.rs"

[[example]]
name = "fix_password"
path = "../../examples/fix_password.rs"

[build-dependencies]
tonic-build = "0.10"