[package]
name = "smartticket-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
smartticket-shared-config = { path = "../shared/config" }
smartticket-shared-error = { path = "../shared/error" }
smartticket-shared-auth = { path = "../shared/auth" }
smartticket-shared-database = { path = "../shared/database" }
smartticket-core = { path = "../core" }

tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "compression-full", "fs"] }
hyper = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
futures = "0.3"
bcrypt = "0.15"
sqlx = { workspace = true }
anyhow = { workspace = true }
thiserror = "1.0"
# HTTP Gateway specific dependencies
http = "1.0"
http-body = "1.0"
httparse = "1.8"
tower-cookies = "0.9"
tower-request-id = "0.3.0"
jsonwebtoken = "9.2"
regex = "1.10"
serde_yaml = "0.9"

[[bin]]
name = "gateway"
path = "src/main.rs"

[build-dependencies]
tonic-build = "0.10"