[package]
name = "smartticket-shared-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }