[package]
name = "smartticket-shared-metrics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
smartticket-shared-error = { path = "../error" }

prometheus = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
lazy_static = "1.4"
once_cell = "1.19"