[package]
name = "smartticket-shared-database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
smartticket-shared-error = { path = "../error" }
smartticket-shared-config = { path = "../config" }

sqlx = { workspace = true }
redis = { workspace = true }
pgvector = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
jsonwebtoken = { workspace = true }

[[example]]
name = "demo_auth"
path = "examples/demo_auth.rs"

[[example]]
name = "demo_database"
path = "examples/demo_database.rs"

[[example]]
name = "demo_database_simple"
path = "examples/demo_database_simple.rs"

[[example]]
name = "demo_db_check"
path = "examples/demo_db_check.rs"