[package]
name = "smartticket-shared-permissions"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
smartticket-shared-error = { path = "../error" }
smartticket-shared-auth = { path = "../auth" }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
std-collections = "0.1"